correcting menu list alignement

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -172,6 +172,7 @@ nav ul {
   left: 0;
   height: 100vh;
   width: 100%;
+  padding-right: 0;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -187,6 +188,7 @@ nav ul li a {
   font-weight: bold;
   width: 100%;
   color: white;
+  margin: 0;
 }
 
 #menu-btn {
